# optee-fiovb

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
fiovb/: CMakeLists.txt  Makefile
fiovb/host/: Makefile  main.c  ta_fiovb.h
fiovb/ta/: Makefile  entry.c  user_ta.mk  user_ta_header_defines.h
fiovb/ta/include/: ta_fiovb.h
